Sem5/Testing/Pract4/Results/proj2_cppcheck2.txt
src\Assembler.cpp:76:11: error: Division by zero. [zerodiv]
        i / (i - i); // error 1
          ^
src\Interpreter.cpp:40:29: error: Out of bounds access in expression 'operands[0]' because 'operands' is empty. [containerOutOfBounds]
            switch (operands[0])
                            ^
